# Plugin-Videoplayer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  example_video.sh
build_godot_window_x64/: CMakeCache.txt
example/Godot/: export_presets.cfg  project.godot
example/Godot/Environment/: DemoScene.tres
example/Godot/Material/: shader_material.tres
example/Godot/Prefab/: Plane.tscn  PlayUI.tscn  XRPlayer.tscn  sphere.tscn  square.tscn
example/Godot/Scene/: DemoScene.tscn  SquareDemoScene.tscn  XRDemoScene.tscn
example/Godot/Script/: DemoMediaPlayer.gd  MediaController.gd  MouseController.gd
example/Godot/Shader/: helper.gdshaderinc  shader.gdshader  shader_raw.gdshader
example/Godot/addons/videoplayer/: GDExtensionTemplate.gdextension
example/Unity/Assets/Scenes/: SampleScene.unity
src/: CMakeLists.txt
src/src/: DecodeConfig.h  Logger.h
src/src/decoder/: AVDecoderHandler.cpp  AVDecoderHandler.h  DecoderFFmpeg.cpp  DecoderFFmpeg.h  IDecoder.h
src/src/encoder/: AVEncoderHandler.cpp  AVEncoderHandler.h
src/src/gd/: FFmpegMediaPlayer.cpp  FFmpegMediaPlayer.h  Logger.h  register_types.cpp  register_types.h
src/src/interface/: MediaDecoderUtility.cpp  MediaDecoderUtility.h  MediaEncoderUtility.cpp  MediaEncoderUtility.h  MediaInfoUtility.cpp  MediaInfoUtility.h
src/src/native/: main.cpp
src/src/unity/: FFmpegMediaPlayer.cpp  FFmpegMediaPlayer.h  UnityInterface.cpp  UnityInterface.h
